# rust-playaround

./: Cargo.toml
src/: _old.rs  main.rs
src/_old/: main.rs
src/_old/shapes/: area.rs  collision.rs  rectangle.rs
src/shapes/: circle.rs  collision.rs  mod.rs  rectangle.rs
tests/: http_test.rs
