[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
httpc-test = "0.1.1"
hyper = "0.14.26"
serde = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
